# SpectralClusterSupertree

./: .gitignore  LICENSE  README.md  backup.py  backup_2.py  birth_death.py  bl_spectral_cluster_supertree.py  day_distance.py  disable_threading.sh  distance.py  experiment.py  filter_taxa.py  min_cut_supertree.py  new_spectral_cluster_supertree.py  noxfile.py  nx_spectral_cluster_supertree.py  parallel_scs.py  parallel_util.py  pyproject.toml  run_bcd.sh  run_mcs.py  run_mcs.sh  run_scs.py  run_scs.sh  run_superfine.sh  spectral_cluster_supertree.py  tests.py  tmp.nwk  tmp.py  tree_operations.py  tu_spectral_cluster_supertree.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  linters.yml  release.yml  test_main.yml  type_check.yml
birth_death/1000_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/100_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/1500_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/150_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/1800_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree
birth_death/2000_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  9.model_tree
birth_death/200_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/300_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/4000_taxa/: 0.model_tree  1.model_tree  1.source_trees  2.model_tree  3.model_tree  3.source_trees  4.model_tree
birth_death/400_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
birth_death/800_taxa/: 0.model_tree  0.source_trees  1.model_tree  1.source_trees  2.model_tree  2.source_trees  3.model_tree  3.source_trees  4.model_tree  4.source_trees  5.model_tree  5.source_trees  6.model_tree  6.source_trees  7.model_tree  7.source_trees  8.model_tree  8.source_trees  9.model_tree  9.source_trees
simulated_trees/: make_trees.py  sim_align.py
simulated_trees/sim_align/: zhu-tree-rerooted-resolved-molclock.nwk  zhu-tree-rooted-resolved-molclock.nwk
simulated_trees/simulated_tree_data/: 10.model_tree  10.source_trees  100.model_tree  100.source_trees  20.model_tree  20.source_trees
simulated_trees/simulated_tree_data/100_taxa/: 0.source_trees  1.source_trees  2.source_trees  3.source_trees  4.source_trees  5.source_trees  6.source_trees  7.model_tree  7.source_trees  8.source_trees  9.source_trees
src/sc_supertree/: __init__.py  _app.py  cli.py  load.py  scs.py
src/spectral_cluster_supertree/: __init__.py  cli.py  scs.py
src/spectral_cluster_supertree/parallel/: fast_parallel_worker.py  parallel_scs.py  parallel_util.py  smo.6.modelTree.tre  source_tree_1.tre
src/spectral_cluster_supertree/scs/: scs.py
tests/: helpers.py  test_app.py  test_cli.py  test_historical_results.py  test_spectral_cluster_supertree.py
tests/test_data/: dcm_iq_expected.tre  dcm_iq_source.tre  dcm_model_tree.tre  smidgen_og_5500_expected.tre  smidgen_og_5500_source.tre  smidgen_og_expected.tre  smidgen_og_source.tre  smidgenog_expected.tre  smidgenog_source.tre  supertriplets_expected.tre  supertriplets_source.tre
