[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4"]

[project]
authors = [{name = "Robert McArthur"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["click", "numpy", "cogent3>=2024.7.19a5", "scikit-learn>=1.5.2,<1.7.0"]
keywords = [
  "supertree",
  "phylogeny",
  "biology",
  "bioinformatics",
]
license = {file = "LICENSE"}
name = "sc-supertree"
readme = "README.md"
requires-python = ">=3.10,<3.13"
# the following are inferred from the source code
dynamic = ["version", "description"]

[project.urls]
"Bug Tracker" = "https://github.com/rmcar17/SpectralClusterSupertree/issues"
"Source Code" = "https://github.com/rmcar17/SpectralClusterSupertree"

[project.scripts]
scs = "sc_supertree.cli:scs"

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "isort==5.13.2",
  "click==8.1.8",
  "mypy==1.14.1",
  "docformatter",
  "flit",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "nox",
]
test = ["pytest", "pytest-cov", "pytest-xdist", "nox"]

[tool.flit.module]
name = "sc_supertree"

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | doc
  | dist
  | tests/data
)/
'''
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
